<resources>
    <string name="app_name">FAIRlaufen</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="button_title_citytour">Stadtrundgang</string>
    <string name="button_text_citytour">Entdecke zwei nachhaltige&#10;Stadtrundgänge</string>
    <string name="button_title_discover">Entdecken</string>
    <string name="button_text_discover">Entdecke nachhaltige Orte&#10;in Dresden&#10;Neustadt</string>
    <string name="button_tour1">Alternativ für Anfänger:innen</string>
    <string name="button_tour2">FAIRkleidet</string>
    <string name="button_discover">Zur Karte</string>
    <string name="popup_text">Willkommen bei FAIRlaufen!\n\nDiese App zeigt Dir verschiedene nachhaltige Orte in Dresden-Neustadt. Vom Secondhand-Shop bis zum nachhaltigen Café findest Du hier alles, was Dein umweltbewusstes Herz höher schlagen lässt.\n\nWir wünschen Dir viel Spaß beim Erkunden, dein FAIRlaufen-Team!</string>
</resources>