<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:text="@string/app_name"
        android:textColor="@color/text_black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/citytour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@color/background_green"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title_citytour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:clickable="false"
                android:text="@string/button_title_citytour"
                android:textColor="@color/text_black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/text_citytour"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/button_text_citytour"
                    android:textColor="@color/text_black"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/icon_citytour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:src="@drawable/icon_city_tour"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@color/background_bluegrey"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/button_title_discover"
                android:textColor="@color/text_black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/text_discover"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/button_text_discover"
                    android:textColor="@color/text_black"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:id="@+id/icon_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:src="@drawable/icon_discover"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>