<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CitytourActivity"
    android:background="@color/background_grey"
    android:id="@+id/citytour_screen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:text="@string/button_title_citytour"
        android:textColor="@color/text_black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/tour1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@color/background_green"
            android:orientation="vertical"
            android:padding="30dp"
            android:onClick="onClickMap">

            <TextView
                android:id="@+id/title_tour1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/button_tour1"
                android:textColor="@color/text_black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_alternativ"
                android:layout_marginTop="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tour2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@color/background_green"
            android:orientation="vertical"
            android:padding="30dp"
            android:onClick="onClickMap">

            <TextView
                android:id="@+id/title_tour2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_tour2"
                android:textColor="@color/text_black"
                android:textSize="25sp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_shopping"
                android:layout_marginTop="25sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
